Closed Bug 1228227 Opened 9 years ago Closed 9 years ago

intl/icu/source/common/unicode/std_string.h:33: typeinfo:72:7: error: visibility does not match previous (clang++ -stdlib=libc++)

Categories

(Core :: JavaScript: Internationalization API, defect)

Unspecified
FreeBSD
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla45
Tracking Status
firefox42 --- affected
firefox43 --- affected
firefox44 --- affected
firefox45 --- fixed

People

(Reporter: jbeich, Assigned: jbeich)

References

Details

Attachments

(1 file, 1 obsolete file)

OS X is not affected because configure forces -fvisibility=hidden over pragma visibility probably due to bugs in ancient versions of libstdc++.

  c++ -o Unified_cpp_util_internal0.o -c -I../../../../dist/stl_wrappers -I../../../../dist/system_wrappers -include /mozilla-central/config/gcc_hidden.h -DSTATIC_EXPORTABLE_JS_API -DMOZILLA_INTERNAL_API -DIMPL_LIBXUL -I/mozilla-central/intl/unicharutil/util/internal -I. -I/mozilla-central/intl/unicharutil/util -I/mozilla-central/intl/icu/source/common -I/mozilla-central/intl/icu/source/i18n -I../../../../dist/include  -I/objdir/dist/include/nspr -I/objdir/dist/include/nss       -fPIC  -DMOZILLA_CLIENT -include ../../../../mozilla-config.h -MD -MP -MF .deps/Unified_cpp_util_internal0.o.pp -Qunused-arguments   -I/usr/local/include -Qunused-arguments -Wno-unused-local-typedef -Wall -Wempty-body -Woverloaded-virtual -Wsign-compare -Wwrite-strings -Wno-invalid-offsetof -Wno-inline-new-delete -Wno-unused-local-typedef -Wno-c++0x-extensions -Wno-extended-offsetof -Wno-unknown-warning-option -Wno-return-type-c-linkage -fno-exceptions -fno-strict-aliasing -fno-rtti -fno-exceptions -fno-math-errno -std=gnu++0x -pipe  -DNDEBUG -DTRIMMED -g -O -fomit-frame-pointer     /objdir/intl/unicharutil/util/internal/Unified_cpp_util_internal0.cpp
  In file included from /objdir/intl/unicharutil/util/internal/Unified_cpp_util_internal0.cpp:11:
  In file included from /mozilla-central/intl/unicharutil/util/ICUUtils.cpp:8:
  In file included from /mozilla-central/intl/unicharutil/util/ICUUtils.h:18:
  In file included from /mozilla-central/intl/icu/source/i18n/unicode/unum.h:20:
  In file included from /mozilla-central/intl/icu/source/common/unicode/uloc.h:25:
  In file included from /mozilla-central/intl/icu/source/common/unicode/uenum.h:24:
  In file included from /mozilla-central/intl/icu/source/common/unicode/strenum.h:14:
  In file included from /mozilla-central/intl/icu/source/common/unicode/unistr.h:31:
  In file included from /mozilla-central/intl/icu/source/common/unicode/std_string.h:33:
  In file included from ../../../../dist/stl_wrappers/string:50:
  In file included from ../../../../dist/system_wrappers/string:3:
  In file included from /usr/include/c++/v1/string:439:
  In file included from ../../../../dist/stl_wrappers/algorithm:50:
  In file included from ../../../../dist/system_wrappers/algorithm:3:
  In file included from /usr/include/c++/v1/algorithm:628:
  In file included from ../../../../dist/stl_wrappers/memory:50:
  In file included from ../../../../dist/system_wrappers/memory:3:
  In file included from /usr/include/c++/v1/memory:600:
  In file included from ../../../../dist/system_wrappers/typeinfo:3:
  /usr/include/c++/v1/typeinfo:72:7: error: visibility does not match previous
	declaration
  class _LIBCPP_EXCEPTION_ABI type_info
	^
  /usr/include/c++/v1/__config:221:47: note: expanded from macro
	'_LIBCPP_EXCEPTION_ABI'
  #define _LIBCPP_EXCEPTION_ABI __attribute__ ((__visibility__("default")))
						^
  /mozilla-central/config/gcc_hidden.h:6:13: note: previous attribute is here
  #pragma GCC visibility push(hidden)
	      ^
  1 error generated.
Attached patch Limit workaround to libstdc++ (obsolete) — Splinter Review
Comment on attachment 8692325 [details] [diff] [review]
Limit workaround to libstdc++

https://treeherder.mozilla.org/#/jobs?repo=try&revision=5ce1141a5be5
Attachment #8692325 - Flags: review?(jwalden+bmo)
Comment on attachment 8692325 [details] [diff] [review]
Limit workaround to libstdc++

Review of attachment 8692325 [details] [diff] [review]:
-----------------------------------------------------------------

If it passes try-muster, rs=me.  If you need a really-competent reviewer, as opposed to one who can just delegate to try-results, ask glandium or someone else.  :-)
Attachment #8692325 - Flags: review?(jwalden+bmo) → review+
Missed intl/update-icu.sh. I guess, :glandium knows more how it's used.
Attachment #8694314 - Flags: review?(mh+mozilla)
Attachment #8692325 - Attachment is obsolete: true
Assignee: nobody → jbeich
Status: NEW → ASSIGNED
(*Sigh* hg bzexport is more annoying to use than git bz.)

Reset Assignee until the patch here is confirmed to be preferred over, say, stalling for upstream response.
Assignee: jbeich → nobody
Status: ASSIGNED → NEW
Attachment #8694314 - Flags: review?(mh+mozilla) → review+
Keywords: checkin-needed
https://hg.mozilla.org/mozilla-central/rev/de4aa11eebb9
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla45
Assignee: nobody → jbeich
Blocks: 1263325
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: