Bug 1228227 - Unbreak build with libc++ and config/gcc_hidden.h after bug 1075758. r=Waldo r=glandium