intl/icu/source/common/unicode/std_string.h
@@ -27,7 +27,7 @@
 
 #if U_HAVE_STD_STRING
 
-#if !defined(_MSC_VER)
+#if defined(__GLIBCXX__)
 namespace std { class type_info; } // WORKAROUND: http://llvm.org/bugs/show_bug.cgi?id=13364
 #endif
 #include <string>
